gnome-settings-daemon (3.28.0-1) UNRELEASED; urgency=medium

  * Remove empty debian/patches/
  * Vcs-*: Update for move from Alioth svn to salsa.debian.org git
  * d/gbp.conf: Add
  * New upstream release
  * d/copyright: Update

 -- Simon McVittie <smcv@debian.org>  Sat, 17 Mar 2018 14:17:59 +0000

gnome-settings-daemon (3.27.92-1) experimental; urgency=medium

  * New upstream release candidate

 -- Jeremy Bicha <jbicha@debian.org>  Mon, 05 Mar 2018 10:52:10 -0500

gnome-settings-daemon (3.27.91-1) experimental; urgency=medium

  * New upstream development release
  * Build with meson
  * Make build tests non-fatal since the tests need to be updated
    after the meson conversion. See upstream issue 7
  * A11yKeyboard plugin has been dropped, update some of the Breaks
    for this

 -- Jeremy Bicha <jbicha@debian.org>  Mon, 19 Feb 2018 14:23:09 -0500

gnome-settings-daemon (3.26.2-1) unstable; urgency=medium

  [ Michael Biebl ]
  * New upstream release
  * Switch to dh_missing

  [ Helmut Grohne ]
  * Honour DEB_BUILD_OPTIONS=nocheck (Closes: #880486)

 -- Michael Biebl <biebl@debian.org>  Thu, 02 Nov 2017 18:45:01 +0100

gnome-settings-daemon (3.26.1-2) unstable; urgency=medium

  * Release to unstable

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 13 Oct 2017 17:06:30 -0400

gnome-settings-daemon (3.26.1-1) experimental; urgency=medium

  * New upstream release
    - Fix a regression in HiDPI support for Xorg session (LP: #1720150)
  * Bump Standards-Version to 4.1.1

 -- Jeremy Bicha <jbicha@debian.org>  Tue, 03 Oct 2017 10:18:58 -0400

gnome-settings-daemon (3.26.0-1) experimental; urgency=medium

  * Team upload
  * debian/watch: Only watch for stable versions again
  * New upstream stable release

 -- Simon McVittie <smcv@debian.org>  Wed, 13 Sep 2017 11:41:21 +0100

gnome-settings-daemon (3.25.92-1) experimental; urgency=medium

  * Team upload
  * New upstream release

  [ Laurent Bigonville ]