@@ -50,10 +50,6 @@ Standards-Version: 4.1.1
 Vcs-Git: https://salsa.debian.org/gnome-team/gnome-settings-daemon.git
 Vcs-Browser: https://salsa.debian.org/gnome-team/gnome-settings-daemon
 
-# TODO: budgie-core detects gnome-settings-daemon version at build time,
-# so when we go to unstable, it should be updated to B-D on
-# gnome-settings-daemon (>= 3.25.4), then this Breaks should be updated
-# to the first version that did so
 Package: gnome-settings-daemon
 Architecture: any
 Depends: ${shlibs:Depends},
@@ -63,18 +59,18 @@ Depends: ${shlibs:Depends},
          nautilus-data (>= 2.91.3-1)
 Recommends: pulseaudio,
             iio-sensor-proxy
-Breaks: afterstep (<< 2.2.12-10.1~),
-        budgie-core (<< 10.4~),
-        cairo-dock (<< 3.4.1-1.1~),
+Breaks: afterstep (<< 2.2.12-11.1~),
+        budgie-core (<< 10.4+git20171031.10.g9f71bb8-1.2~),
+        cairo-dock (<< 3.4.1-1.2~),
         gdm3 (<< 3.27),
         gnome-control-center (<< 1:3.25.91),
         gnome-initial-setup (<< 3.27),
         gnome-session (<< 3.27),
-        gnome-session-flashback (<< 3.27),
+        gnome-session-flashback (<< 3.26.0-3~),
         gnome-shell (<< 3.25.91),
-        gnome-shell-extensions (<< 3.22.2-2~),
-        openbox-gnome-session (<< 3.6.1-4.1~),
-        xmonad (<< 0.13-5~)
+        gnome-shell-extensions (<< 3.27),
+        openbox-gnome-session (<< 3.6.1-7~),
+        xmonad (<< 0.13-7~)
 Description: daemon handling the GNOME session settings
  This package contains the daemon which is responsible for setting the
  various parameters of a GNOME session and the applications that run
